<resources>
    <string name="app_name">Periodic Table</string>
    <string name="intent_data_key">dataKey</string>

    <string name="atomicNum">Atomic number: %s</string>
    <string name="symbol">%s</string>
    <string name="element">%s</string>
    <string name="atomicMass">Atomic mass: %s</string>
    <string name="electronicConfig">Electronic Configuration: %s</string>
    <string name="atomicRadius">Atomic radius: %s</string>
    <string name="standardState">Standard State: %s</string>
    <string name="bondingType">Bonding Type: %s</string>
    <string name="meltingPoint">Melting Point: %s</string>
    <string name="boilingPoint">Boiling Point: %s</string>
    <string name="density">Density: %s</string>
    <string name="click_here_for_more_information">Click here for more information</string>
    <string name="groupBlock">Group block: %s</string>
    <string name="yearDiscovered">Year discovered: %s</string>
    <string name="block">Block: %s</string>
    <string name="period">Period: %s</string>
    <string name="group">Group: %s</string>


    <string name="search">Search</string>
    <string name="source">Source</string>
    <string name="image_attribution">Image Attribution</string>

    <string name="title">Title: %s</string>
    <string name="creator">Creator: <a href="https://images-of-elements.com/">Jürgen Kummer</a></string>
    <string name="license">License: <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></string>

    <string name="li">Li</string>
    <string name="ar">Ar</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="f">F</string>
    <string name="ne">Ne</string>
    <string name="na">Na</string>
    <string name="mg">Mg</string>
    <string name="al">Al</string>
    <string name="si">Si</string>
    <string name="p">P</string>
    <string name="s">S</string>
    <string name="cl">Cl</string>
    <string name="k">K</string>
    <string name="ca">Ca</string>
    <string name="sc">Sc</string>
    <string name="ti">Ti</string>
    <string name="v">V</string>
    <string name="cr">Cr</string>
    <string name="mn">Mn</string>
    <string name="fe">Fe</string>
    <string name="co">Co</string>
    <string name="ni">Ni</string>
    <string name="cu">Cu</string>
    <string name="zn">Zn</string>
    <string name="ga">Ga</string>
    <string name="ge">Ge</string>
    <string name="as">As</string>
    <string name="se">Se</string>
    <string name="br">Br</string>
    <string name="kr">Kr</string>
    <string name="be">Be</string>
    <string name="he">He</string>
    <string name="h">H</string>
    <string name="lr">Lr</string>
    <string name="no">No</string>
    <string name="md">Md</string>
    <string name="rb">Rb</string>
    <string name="sr">Sr</string>
    <string name="y">Y</string>
    <string name="zr">Zr</string>
    <string name="nb">Nb</string>
    <string name="mo">Mo</string>
    <string name="tc">Tc</string>
    <string name="ru">Ru</string>
    <string name="rh">Rh</string>
    <string name="pd">Pd</string>
    <string name="ag">Ag</string>
    <string name="cd">Cd</string>
    <string name="in">In</string>
    <string name="sn">Sn</string>
    <string name="sb">Sb</string>
    <string name="te">Te</string>
    <string name="i">I</string>
    <string name="xe">Xe</string>
    <string name="cs">Cs</string>
    <string name="ba">Ba</string>
    <string name="la">La</string>
    <string name="hf">Hf</string>
    <string name="ta">Ta</string>
    <string name="w">W</string>
    <string name="re">Re</string>
    <string name="os">Os</string>
    <string name="ir">Ir</string>
    <string name="pt">Pt</string>
    <string name="au">Au</string>
    <string name="hg">Hg</string>
    <string name="tl">Tl</string>
    <string name="bi">Bi</string>
    <string name="po">Po</string>
    <string name="at">At</string>
    <string name="rn">Rn</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="ra">Ra</string>
    <string name="ac">Ac</string>
    <string name="rf">Rf</string>
    <string name="db">Db</string>
    <string name="sg">Sg</string>
    <string name="bh">Bh</string>
    <string name="hs">Hs</string>
    <string name="mt">Mt</string>
    <string name="ds">Ds</string>
    <string name="rg">Rg</string>
    <string name="cn">Cn</string>
    <string name="nh">Nh</string>
    <string name="fl">Fl</string>
    <string name="mc">Mc</string>
    <string name="lv">Lv</string>
    <string name="ts">Ts</string>
    <string name="og">Og</string>
    <string name="ce">Ce</string>
    <string name="pr">Pr</string>
    <string name="nd">Nd</string>
    <string name="pm">Pm</string>
    <string name="sm">Sm</string>
    <string name="eu">Eu</string>
    <string name="gd">Gd</string>
    <string name="tb">Tb</string>
    <string name="dy">Dy</string>
    <string name="ho">Ho</string>
    <string name="er">Er</string>
    <string name="tm">Tm</string>
    <string name="yb">Yb</string>
    <string name="lu">Lu</string>
    <string name="pa">Pa</string>
    <string name="u">U</string>
    <string name="np">Np</string>
    <string name="pu">Pu</string>
    <string name="am">Am</string>
    <string name="cm">Cm</string>
    <string name="bk">Bk</string>
    <string name="cf">Cf</string>
    <string name="es">Es</string>
    <string name="fm">Fm</string>
    <string name="pb">Pb</string>
</resources>